--- a/홈화면.html
+++ b/홈화면.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
 <style>
 
+body{
+    margin: 0;
+}
+
 *{padding:0;margin:0}
         
         li{list-style:none}
@@ -13,7 +17,7 @@
         .menu {
         width: 100%;
         overflow: hidden;
-        margin: 150px auto;
+        margin-top: 5px;
         }
 
         .menu > li {
@@ -46,6 +50,13 @@
         .menu > li:hover .submenu {
         height: 250px; /*서브메뉴 li한개의 높이 50*5*/
         transition-duration: 1s;}
+
+        h1{
+          font-size: 100px;
+          border-bottom: 3px solid black;
+          margin:0;
+        }
+        
 
 </style>
 
@@ -108,7 +119,6 @@
       </ul>
     </li>
   </ul>
-
 
     <p style="text-align:center"><img src="s24u.2.jpg" width="900"></p>
 
